tools/c7n_gcp/tests/data/flights/firewall-delete/get-compute-v1-projects-cloud-custodian-global-firewalls-test_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Mon, 15 Mar 2021 18:01:24 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3-29=\":443\"; ma=2592000,h3-T051=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "404",
    "content-length": "337",
    "-content-encoding": "gzip"
  },
  "body": {
    "error": {
      "code": 404,
      "message": "The resource 'projects/cloud-custodian/global/firewalls/test' was not found",
      "errors": [
        {
          "message": "The resource 'projects/cloud-custodian/global/firewalls/test' was not found",
          "domain": "global",
          "reason": "notFound"
        }
      ]
    }
  }
}
