tools/c7n_gcp/tests/data/flights/firewall-delete/get-compute-v1-projects-cloud-custodian-global-firewalls_1.json
{
  "headers": {
    "etag": "8fHxWVSzPDAHtpi7nQ8jzRCMzuw=/wlTeDtLwzThoxzaPUy99NB8ekkc=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Mon, 15 Mar 2021 18:01:18 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3-29=\":443\"; ma=2592000,h3-T051=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "4387",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls?alt=json"
  },
  "body": {
    "id": "projects/cloud-custodian/global/firewalls",
    "items": [
      {
        "id": "5789677160149163724",
        "creationTimestamp": "2021-03-15T10:57:55.939-07:00",
        "name": "test",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "1.1.1.1"
        ],
        "targetTags": [
          "test"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "22"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/test",
        "kind": "compute#firewall"
      }
    ],
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls",
    "kind": "compute#firewallList"
  }
}
